--- a/src/utils/settings.json
+++ b/src/utils/settings.json
@@ -1,5 +1,6 @@
 {
-    "messageLogChannelId": "1443424191960449085",
-    "modLogChannelId": "1443608108197744740",
-    "commandChannel": "1442909495909945435"
+  "messageLogChannelId": "1443424191960449085",
+  "modLogChannelId": "1443608108197744740",
+  "commandChannel": "1442909495909945435",
+  "countingChannel": "1456381943296823548"
 }
