--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^17.2.3",
     "i18next": "^25.6.0",
     "i18next-fs-backend": "^2.6.0",
+    "node-cron": "^4.2.1",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
   },
